--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 * {
     box-sizing: border-box;
 }
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 200px;
+    background-color: black;
+}
